--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header{
     align-items: center;
     background-color: rgb(248, 196, 51);
     position: sticky;
+    top: 0;
 }
 
 header a img{
