--- a/style.css
+++ b/style.css
@@ -6,18 +6,29 @@
     list-style: none;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 header{
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     background-color: rgb(248, 196, 51);
-    position: sticky;
+    position: fixed;
     top: 0;
+    /* right: 10%;
+    left: 10%; */
+
+    width: 60rem;
+    border-radius: 10px;
+
+    /* z-index: 1001; */
 }
 
 header a img{
-    height: 4rem;
+    height: 3rem;
     width: auto;
     border-radius: 15%;
 }
@@ -34,8 +45,16 @@ nav ul li a{
     font-size: 1.2rem;
     font-weight: 600;
     color: black;
+    padding: 5px;
+    border-radius: 10px;
 }
 
+nav ul li a:hover{
+    transition: 0.8s;
+    color: white;
+    /* background-color: #cc5c43; */
+    background-color: rgb(206, 88, 10);
+}
 
 
 
@@ -46,7 +65,7 @@ nav ul li a{
     background-position: center;
     background-size: cover;
     
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
 }
@@ -56,7 +75,7 @@ nav ul li a{
 }
 
 .home-info img{
-    height: 15rem;
+    height: 10rem;
     width: auto;
 }
 
@@ -82,3 +101,35 @@ nav ul li a{
     border: none;  
 }
 
+
+.about{
+    padding: 10rem;
+    height: 30vh;
+    display: flex;
+
+    align-items: center;
+
+    background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/fee55773845205.5c179e8691f91.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.about img{
+    height: 18rem;
+    width: auto;
+
+    filter: drop-shadow(1px 1px 20px green);
+}
+
+.about div h2{
+    margin-bottom: 1rem;
+    font-size: 2.5rem;
+    color: white;
+}
+
+.about div p{
+    font-size: 1.5rem;
+    color: white;
+}
