--- a/style.css
+++ b/style.css
@@ -18,10 +18,8 @@ header{
     background-color: rgb(248, 196, 51);
     position: fixed;
     top: 0;
-    right: 10%;
-    left: 10%;
 
-    width: 60rem;
+    width: 100%;
     border-radius: 10px;
 
     z-index: 1001;
@@ -41,7 +39,7 @@ nav ul li{
     margin-right: 1rem;
 }
 
-nav ul li a{
+nav ul li a, .nav-links-mobile li a{
     font-size: 1.2rem;
     font-weight: 600;
     color: black;
@@ -56,6 +54,72 @@ nav ul li a:hover{
     background-color: rgb(206, 88, 10);
 }
 
+.mobile-menu{
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60%;
+    height: 100%;
+    background-color: rgb(248, 196, 51);
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.8rem;
+}
+
+.nav-links-mobile{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 1.2rem;
+    width: 0%;
+    padding: 0;
+}
+
+.nav-links-mobile li {
+    border-bottom: 1px solid #787272;
+    padding-bottom: 1.2rem;
+}
+
+.hamburger,
+.close {
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+
+.close {
+    margin-top: 20px;
+    margin-right: 20px;
+    display: block;
+    align-self: end;
+}
+
+.flex{
+    display: flex;
+}
+
+@media(max-width:768px){
+
+    html{
+        font-size: 12px;
+    }
+
+    .nav-links{
+        display: none;
+    }
+
+    header p{
+        display: none;
+    }
+
+    .hamburger{
+        display: block;
+    }
+}
 
 
 .home{
@@ -97,7 +161,7 @@ nav ul li a:hover{
     width: 30rem;
     margin: 2rem auto;
 
-    background-color: yellow;  
+    background-color: rgb(255, 94, 0);  
     border: none;  
 }
 
