--- a/style.css
+++ b/style.css
@@ -186,12 +186,29 @@ nav ul li a:hover{
     width: auto;
 
     filter: drop-shadow(1px 1px 20px green);
+
+    animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float{
+    0%{
+        transform: translateY(0);
+    }
+
+    50%{
+        transform: translateY(-20px);
+    }
+
+    100%{
+        transform: translateY(0);
+    }
 }
 
 .about div h2{
     margin-bottom: 1rem;
     font-size: 2.5rem;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .about div p{
@@ -216,11 +233,14 @@ nav ul li a:hover{
 
 .news{
     padding: 10rem;
-    height: 50vh;
+    height: 100vh;
+    background-color: #212529;
+    color: white;
 }
 
 .news h2{
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .title{
@@ -230,4 +250,32 @@ nav ul li a:hover{
 .title img{
     height: 3rem;
     margin-bottom: -5px;
+}
+
+.grid{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.grid div{
+    height: 17rem;
+    text-align: center;
+    margin: 1rem auto;
+    background-color: rgb(255, 94, 0);
+    border-radius: 1rem;
+    border: 10px red;
+}
+
+.grid div img{
+    height: 15rem;
+    width: 27rem;
+    border-radius: 1rem;
+}
+
+.grid div p{
+    font-size: 1.1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    color: white;
 }
